--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Wangdu Duntak",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.9.1",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-router": "^2.0.1"
